Login form alignment fix

--- a/public/stylesheets/public/defaultStyles.less
+++ b/public/stylesheets/public/defaultStyles.less
@@ -1104,9 +1104,6 @@ a{
 .rememberMeInput{
   padding-left: 20px;
 }
-.loginListMargin{
-  margin-bottom: 15px;
-}
 
 //==================================================== don't mess with theese
 .noPatientsLogo{
